--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,16 @@ flutter:
     - assets/Images/wallet.png
     - assets/Images/reward.png
     - assets/Images/refer.png
+    - assets/Images/dth.png
+    - assets/Images/bulb.png
+    - assets/Images/rent.png
+    - assets/Images/loan.png
+    - assets/Images/cylinder.png
+    - assets/Images/fasttag.png
+    - assets/Images/mobile.png
+    
+    
+    
     
     
     
